Refactor core placeholder replacement method